# Pong

./: CMakeLists.txt  CMakePresets.json
include/: ball.h  board.h  main.h  paddle.h
src/: ball.c  board.c  main.c  paddle.c
